--- a/package.json
+++ b/package.json
@@ -4,18 +4,32 @@
   "description": "RoboSmith VS Code Extension",
   "private": true,
   "scripts": {
+    "test": "vitest",
     "lint": "eslint . --ext .ts,.tsx",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "// --- CONTEXT SLICER (Development) ---": "",
+    "dev:slicer": "run-p dev:slicer:ui dev:slicer:watcher",
+    "dev:slicer:ui": "cd context-slicer && pnpm dev",
+    "dev:slicer:watcher": "cd context-slicer && node --loader ts-node/esm scripts/generate-dump.ts --watch"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
     "@types/node": "^24.9.2",
     "@types/vscode": "^1.105.0",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "eslint": "^9.38.0",
+    "globals": "^16.4.0",
     "jsdom": "^27.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.5"
+    "typescript-eslint": "^8.46.2",
+    "vitest": "^4.0.6"
+  },
+  "dependencies": {
+    "immer": "^10.2.0",
+    "zustand": "^5.0.8"
   }
 }
