--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-      "uuid": "^9.0.1"
+      "uuid": "^9.0.1",
+      "execa": "^8.0.1"
     },
     "devDependencies": {
       "@types/uuid": "^9.0.8"
