--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.0.1",
   "description": "RoboSmith VS Code Extension",
   "private": true,
+  "pnpm": {
+    "overrides": {
+      "vite": "^7.2.2"
+    }
+  },
   "scripts": {
-    "test": "vitest",
+    "test": "vitest run packages/client/src/simple.spec.ts",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write .",
     "// --- CONTEXT SLICER (Development) ---": "",
@@ -13,9 +18,12 @@
     "dev:slicer:watcher": "cd context-slicer && node --loader ts-node/esm scripts/generate-dump.ts --watch"
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.9.2",
     "@types/vscode": "^1.105.0",
+    "@types/vscode-webview": "^1.57.5",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "eslint": "^9.38.0",
@@ -26,10 +34,12 @@
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.2",
-    "vitest": "^4.0.6"
+    "vitest": "^2.1.9"
   },
   "dependencies": {
+    "@sveltejs/vite-plugin-svelte-inspector": "^5.0.1",
     "immer": "^10.2.0",
+    "vite": "^7.2.2",
     "zustand": "^5.0.8"
   }
 }
