--- a/webview-ui/tsconfig.json
+++ b/webview-ui/tsconfig.json
@@ -9,14 +9,9 @@
  * 3. DELEGATES all common compiler options (strictness, aliases) to the base configuration.
  */
  {
-  // We are inheriting from two configurations:
-  // 1. `@tsconfig/svelte/tsconfig.json`: Provides the Svelte-specific compiler settings.
-  // 2. `../tsconfig.base.json`: Provides our custom monorepo settings, including the path alias.
-  // By listing our base config second, its settings (like 'paths') will correctly
-  // be applied on top of the Svelte defaults.
-  "extends": ["@tsconfig/svelte/tsconfig.json", "../tsconfig.base.json"],
-
-  // We only need to define what is unique to this package.
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.svelte", "vitest.setup.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "extends": "../tsconfig.base.json",
+  "include": ["src/**/*.ts"],
+  "compilerOptions": {
+    "types": ["node", "vitest/globals"]
+  }
 }
